fix alignment problems, change texts on summary and status, and add tooltips

--- a/src/styles/_status.scss
+++ b/src/styles/_status.scss
@@ -136,4 +136,12 @@
       color: #737778;
     }
   }
+
+  .v-divider--vertical {
+    margin: 0 -1px;
+  }
+
+  .breakable-address {
+    word-break: break-all;
+  }
 }
